--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -19,4 +19,6 @@ dependencies {
     // koin
     implementation "io.insert-koin:koin-core:$koin_version"
     implementation "io.insert-koin:koin-android:$koin_version"
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
 }
